--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.13",
+    "@react-three/fiber": "^8.15.10",
+    "@react-three/postprocessing": "^2.15.11",
+    "antd": "^5.11.0",
+    "axios": "^1.6.1",
+    "color.js": "^1.2.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "three": "^0.158.0",
+    "three-stdlib": "^2.28.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
